--- a/28093-h/28093-h.htm
+++ b/28093-h/28093-h.htm
@@ -3256,7 +3256,7 @@ will-power, came downstairs, took the exact road
 which his father had taken, walked across the
 garden and sat down either on the steps of the
 rotunda, which you see here, in the picture, or
-on the curb of the well. At twenty-seven minutes
+on the kerb of the well. At twenty-seven minutes
 past five, he rose and went indoors again; and
 until his death, which occurred in 1820, he never
 once failed to perform this incomprehensible pilgrimage.
@@ -3870,7 +3870,7 @@ come back and hand him money.</p>
 <p>The fifth race was just finishing. Dugrival lit
 a cigar. At that moment, a gentleman in a tight-fitting
 brown suit, with a face ending in a peaked
-gray beard, came up to him and asked, in a confidential
+grey beard, came up to him and asked, in a confidential
 whisper:</p>
 
 <p>"Does this happen to belong to you, sir?"</p>
@@ -4156,7 +4156,7 @@ at the bottom of the street. The porter's wife at
 once left her room to listen to the invectives which
 the adversaries were hurling at each other's heads.<span class="pagenum"><a name="Page_111" id="Page_111">[111]</a></span>
 Her back was no sooner turned than a man, young,
-of medium height and dressed in a gray suit of irreproachable
+of medium height and dressed in a grey suit of irreproachable
 cut, slipped into the house and ran up
 the staircase.</p>
 
@@ -4820,7 +4820,7 @@ that."</p>
 <p>She took down the receiver of the telephone,
 waited and asked:</p>
 
-<p>"Number 822.48, please."<span class="pagenum"><a name="Page_129" id="Page_129">[129]</a></span></p>
+<p>"Number 82248, please."<span class="pagenum"><a name="Page_129" id="Page_129">[129]</a></span></p>
 
 <p>And, after a second or two:</p>
 
@@ -5165,7 +5165,7 @@ of December, the man stooped at every thirty or
 forty yards to fasten his boot-lace, or pick up his
 stick, or for some other reason. And, each time,
 he took a little piece of orange-peel from his pocket
-and laid it stealthily on the curb of the pavement.
+and laid it stealthily on the kerb of the pavement.
 It was probably a mere display of eccentricity, a
 childish amusement to which no one else would
 have paid attention; but Ganimard was one of those
@@ -5216,7 +5216,7 @@ interest in the chief-inspector's eyes.</p>
 <p>At the Place Beauveau the man hesitated. Then,
 apparently making up his mind, he twice turned
 up and twice turned down the bottom of his trousers
-legs. Hereupon, the boy sat down on the curb,
+legs. Hereupon, the boy sat down on the kerb,
 opposite the sentry who was mounting guard outside
 the Ministry of the Interior, and marked the flagstone
 with two little crosses contained within two
@@ -10265,7 +10265,7 @@ and so unexpected that the onlookers screamed
 with laughter.</p>
 
 <p>The stranger unbound his head; and they saw a
-veiled mask of tangled gray beard encroaching on
+veiled mask of tangled grey beard encroaching on
 every side upon a skeleton face lit up by two eyes
 burning with fever.</p>
 
